--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ analytics:
 # Site Author
 author:
   name             : "Endong Liu"
-  avatar           : "/assets/images/death-note-l.jpg"
-  bio              : "***Worse Is Better***"
+  avatar           : "/assets/images/top-secret.jpg"
+  bio              : "Worse Is Better"
   location         : "London"
   email            :
   links:
