--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Endong Liu"
   avatar           : "/assets/images/top-secret.jpg"
-  bio              : "Worse Is Better"
+  bio              : "*Worse Is Better*"
   location         : "London"
   email            :
   links:
