--- a/_config.yml
+++ b/_config.yml
@@ -297,6 +297,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
-      share: true
-      related: true
+      comments: false
+      share: false
+      related: false
