--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   - title: "Projects"
     url: /projects/
   - title: "Publications"
-    url: /publications
+    url: /publications/
   - title: "Blog"
     url: /blog/
   - title: "CV"
