--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "Endong Liu"
   avatar           : "/assets/images/top-secret.jpg"
   bio              : "*Stay Hungry, Stay Foolish*"
-  location         : "London, UK"
+  location         : "Birmingham, UK"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
