--- a/_config.yml
+++ b/_config.yml
@@ -284,6 +284,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  teaching:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
