--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
     url: /projects/
   - title: "Publications"
     url: /publications/
-  - title: "Teaching"
-    url: /teaching/
+  - title: "Activities"
+    url: /activities/
   - title: "Blog"
     url: /blog/
   - title: "CV"
